<resources>
    <string name="app_name">Covid-19</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Click here !</string>
    <string name="button_global">GLOBAL</string>
    <string name="button_listOfCountries">LIST OF COUNTRIES</string>
    <string name="Text_presentation"> For global figures of confirmed, dead and recovered people in the world : \n \n-> Click on \"GLOBAL\". \n \n For details per country : \n\n -> Click on \"LIST OF COUNTRIES\".</string>
    <string name="stayathome">#StayAtHome</string>
    <string name="title_activity_maps">Map</string>
    <string name="hintEditText">Name of the country</string>
    <string name="rechercher">Search</string>
    <string name="menu_principal">Main menu</string>
    <string name="global_figures">Global figures</string>
    <string name="a_propos">About the app</string>
    <string name="useful_links">Useful links</string>
    <string name="countries">Countries</string>
    <string name="open" />
    <string name="close" />
    <string name="about_the_app">
        The coronavirus is the global pandemic that affects the world for several months now. \n
        The virus is causing unprecedented health and economic havocs. </string>
    <string name="about_question"> What is this app ? </string>
    <string name="description_project">This application is a project made within the scope of the mobile programming lesson. \n \nIt draws up an inventory of total and new confirmed, dead and recovered people globally and per country. </string>
    <string name="link1">https://www.gouvernement.fr/info-coronavirus</string>
    <string name="link2">https://www.gouvernement.fr/info-coronavirus/orientation-medicale</string>
    <string name="link3">https://www.who.int/</string>
    <string name="link4">https://www.europeanlung.org/en/get-involved/european-patient-organisation-network/</string>
    <string name="link5">https://www.blf.org.uk/support-for-you/coronavirus</string>
    <string name="global">In the world :</string>
    <string name="europe">In Europe :</string>
    <string name="britain">"In UK : "</string>
    <string name="france">"In France : "</string>
    <string name="favorites">Favorites</string>
    <string name="memes">Covid Memes</string>
    <string-array name="menu">
        <item>Menu</item>
        <item>Countries</item>
        <item> Global </item>
        <item>Useful links</item>
        <item>Memes</item>
        <item>About the app</item>
    </string-array>
</resources>
