<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.LinksActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/useful_links"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/codystar"
            android:text="@string/useful_links"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/link1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="41dp"
            android:autoLink="web"
            android:text="@string/link1"
            android:textAlignment="viewStart"
            android:textColorLink="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/link2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/link5" />

        <TextView
            android:id="@+id/link2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:autoLink="web"
            android:text="@string/link2"
            android:textAlignment="viewStart"
            android:textColorLink="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/link3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="243dp"
            android:autoLink="web"
            android:text="@string/link3"
            android:textAlignment="viewStart"
            android:textColorLink="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/link4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/useful_links"
            app:layout_constraintVertical_bias="0.266" />

        <TextView
            android:id="@+id/link4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:autoLink="web"
            android:text="@string/link4"
            android:textAlignment="viewStart"
            android:textColorLink="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/link5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/link3" />

        <TextView
            android:id="@+id/link5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="3dp"
            android:autoLink="web"
            android:text="@string/link5"
            android:textAlignment="viewStart"
            android:textColorLink="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/link1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/link4"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/global"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/share_tech_mono"
            android:text="@string/global"
            android:textColor="#009688"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/link3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/useful_links" />

        <TextView
            android:id="@+id/europe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/share_tech_mono"
            android:text="@string/europe"
            android:textColor="#009688"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/link4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/link3" />

        <TextView
            android:id="@+id/britain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/share_tech_mono"
            android:text="@string/britain"
            android:textColor="#009688"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/link5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/link4"
            app:layout_constraintVertical_bias="0.402" />

        <TextView
            android:id="@+id/france"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/share_tech_mono"
            android:text="@string/france"
            android:textColor="#009688"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/link1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/link5" />

        <TextView
            android:id="@+id/stayathome"
            android:layout_width="149dp"
            android:layout_height="36dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/stayathome"
            android:textAlignment="center"
            android:textColor="#C81414"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/link2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view5"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_drawer"
        app:menu="@menu/menu_links" />

</androidx.drawerlayout.widget.DrawerLayout>