<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.AboutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/what_is_coronavirus"
            android:layout_width="0dp"
            android:layout_height="154dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/about_the_app"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/about_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/about_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/about_question"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/what_is_coronavirus" />

        <ImageView
            android:id="@+id/logo_esiea"
            android:layout_width="232dp"
            android:layout_height="129dp"
            android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/logo_esiea" />

        <TextView
            android:id="@+id/description_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="60dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/description_project"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/logo_esiea"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_question"
            app:layout_constraintVertical_bias="0.086" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="163dp"
            android:layout_height="131dp"
            android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/logo_esiea"
            app:layout_constraintTop_toBottomOf="@+id/description_project"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/globe_mask" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view2"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_drawer"
        app:menu="@menu/menu_about" />

</androidx.drawerlayout.widget.DrawerLayout>